# ComfyUI-MatAnyone-custom

./: README.md  __init__.py  constants.py  mat_anyone.py  mat_anyone2.py  pyproject.toml  run.py  utils.py
.github/workflows/: publish_action.yml
src/matanyone2/config/: __init__.py  eval_matanyone_config.yaml
src/matanyone2/config/model/: base.yaml
src/matanyone2/inference/: __init__.py  image_feature_store.py  inference_core.py  kv_memory_store.py  memory_manager.py  object_info.py  object_manager.py
src/matanyone2/model/: aux_modules.py  big_modules.py  channel_attn.py  group_modules.py  matanyone2.py  modules.py
src/matanyone2/model/transformer/: __init__.py  object_summarizer.py  object_transformer.py  positional_encoding.py  transformer_layers.py
src/matanyone2/model/utils/: __init__.py  memory_utils.py  parameter_groups.py  resnet.py
src/matanyone2/utils/: __init__.py  device.py  get_default_model.py  inference_utils.py  tensor_utils.py
tests/: test_mask_guidance.py
workflow/: workflow_mat_anyone.json  workflow_mat_anyone_v2.json
