[project]
name = "comfyui-matanyone-custom"
description = "MatAnyone2 for ComfyUI with batch-mask guidance and propagation fallback"
version = "2.2.0"
license = {file = "LICENSE"}
dependencies = ["torch", "omegaconf"]

[project.urls]
Repository = "https://github.com/THEman6989/ComfyUI-MatAnyone-custom"
Upstream = "https://github.com/FuouM/ComfyUI-MatAnyone"

[tool.comfy]
PublisherId = "theman6989"
DisplayName = "ComfyUI-MatAnyone-custom"
Icon = ""
